//apply plugin: 'application'
//apply plugin: 'idea'

plugins {
    id 'org.springframework.boot' version '2.4.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'application'
    id 'idea'
}

group 'ru.rtuitlab'
version '0.0.1'

sourceCompatibility = 1.8
mainClassName = "Notify.java"

jar {
    manifest {
        attributes 'Implementation-Title': 'Notify-service',
                'Implementation-Version': version,
                'Main-Class': mainClassName
    }
    baseName = project.name
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
}


sourceSets {
    main.java.srcDirs = main.java.srcDirs = ['src/main/java']
    test.java.srcDirs = test.java.srcDirs = ['src/test/java']
    main.resources.srcDirs = ['src/main/resources']
    test.resources.srcDirs = ['src/test/resources']
}

repositories {
    mavenCentral()
}

//idea.module.resourceDirs += file('src')

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
//    implementation 'org.springframework.boot:spring-boot-starter-mail'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'redis.clients:jedis'
    implementation 'com.google.code.gson:gson'


    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

//dependencies {
//    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
//
//    compile("ch.qos.logback:logback-classic:$logback_version")
//    compile("org.jsoup:jsoup:$jsoup_version")
//
//    compile("org.hibernate:hibernate-core:$hibernate_version")
//    compile("org.hibernate:hibernate-c3p0:$hibernate_version")
//    compile("org.hibernate:hibernate-entitymanager:$hibernate_version")
//
//    compile("org.postgresql:postgresql:$postgresql_version")
//    compile("javax.mail:mail:$mail_version")
//
//    compile("com.github.kittinunf.fuel:fuel:$fuel_version")
//    compile("com.github.kittinunf.fuel:fuel-gson:$fuel_version")
//
//    compile "io.ktor:ktor-server-netty:$ktor_version"
//    compile "io.ktor:ktor-gson:$ktor_version"
//
//    compile("com.vk.api:sdk:$vk_api_version") {
//        exclude group: 'io.netty', module: 'netty-codec-http2'
//        exclude group: 'io.netty', module: 'netty-transport-native-kqueue'
//        exclude group: 'io.netty', module: 'netty-transport-native-epoll'
//        exclude group: 'org.asynchttpclient', module: 'async-http-client'
//    }
//
//    compile("redis.clients:jedis:$jedis_version")
//    testCompile "io.ktor:ktor-server-tests:$ktor_version"
//}

task copyLibToDeploy(type: Copy) {
    from "build/libs"
    include "*.jar"
    into "deploy"
}
